--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				using a > will produce a child under 
 				using just . will produce div class
 				using ^ moves up and out a level -->
+				<!-- this is a comment -->
 
 				
 	<div class="wrapper">		
